<resources>
    <string name="app_name">MyViewPager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_home_str">首页</string>
    <string name="main_basket_str">洗衣篮</string>
    <string name="main_my_str">我</string>
    <string name="main_more_str">更多</string>
    <string name="frag_home_chendu">成都</string>
    <string name="T_shirt">T恤</string>
    <string name="put_in_package">加入洗衣篮</string>
    <string name="popup_decrisbe02">亲，皮衣、真丝内衣、\n袜子、鞋子不要装哦！</string>
    <string name="popup_describe01">装多少，洗多少！</string>
    <string name="mypackage">/袋子</string>
    <string name="num_1">1</string>
    <string name="num_68">68</string>
    <string name="blouse">衬衣</string>
    <string name="short_wind_jicket">短风衣</string>
    <string name="long_wind_jicket">长风衣</string>
    <string name="suit">西装</string>
    <string name="delete_order">删除订单</string>
    <string name="Laundry">洗衣篮</string>
    <string name="piece_wash">件洗</string>
    <string name="spring_clothes">春/秋装</string>
    <string name="summer_clothes">夏装</string>
    <string name="winter_clothes">冬装</string>
    <string name="jacky">皮衣</string>
    <string name="user_direction">《快快洗用户协议》</string>
    <string name="user_direction01">点击“绑定手机登陆”,即同意</string>
    <string name="login_by_phone">绑定手机登陆</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="num_2">2</string>
    <string name="num_8">8</string>
    <string name="contact_services">联系客服</string>
    <string name="num_phone">18788888000</string>
    <string name="referral_code">S19J6Q</string>
    <string name="referral_code01">推荐码：</string>
    <string name="mony_text">余额支付</string>
    <string name="epay_text">支付宝支付</string>

    <string name="pay_title">请输入支付密码</string>
    <string name="pay_sure">确认支付</string>
    <string name="pay_cancel">取消</string>
    <string name="pay_content">消费金额：34.50元</string>


</resources>
