<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/color_gray">

    <jim.android.Splash.CustomTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_view">
    </jim.android.Splash.CustomTitle>

    <EditText
        android:paddingLeft="20dp"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:id="@+id/et_phone"
        android:layout_below="@id/title_view"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_phone_shape"
        android:hint="@string/input_phone"
        android:textSize="20sp"
        android:singleLine="true"
        android:inputType="phone"
        android:maxLength="11"
        />
    <Button
        android:id="@+id/bt_code"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/et_phone"
        android:layout_toRightOf="@id/et_phone"
        android:layout_marginLeft="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/get_code"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        android:background="@color/color_blue"
        />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/et_phone"
        android:layout_alignLeft="@id/et_phone"
        android:layout_alignRight="@id/bt_code"
        android:background="@drawable/edit_phone_shape"
        android:layout_marginTop="22dp"
        android:hint="@string/input_code"
        android:textSize="20sp"
        android:paddingLeft="20dp"
        android:singleLine="true"
        />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/et_code"
        android:layout_alignLeft="@id/et_phone"
        android:layout_alignRight="@id/bt_code"
        android:layout_marginTop="29dp"
        android:background="@color/color_blue"
        android:text="@string/login_by_phone"
        android:textSize="20sp"
        android:textColor="@color/color_white"
        />

    <TextView
        android:id="@+id/tv_protocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_register"
        android:text="@string/user_direction01"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@id/bt_register"
        android:layout_marginLeft="19dp"
        android:textSize="12sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_protocal"
        android:layout_alignTop="@id/tv_protocal"
        android:layout_alignBottom="@id/tv_protocal"
        android:layout_alignParentRight="true"
        android:background="@color/color_gray"
        android:text="@string/user_direction"
        android:textSize="12sp"
        android:textColor="@color/color_blue"
        android:onClick="userProtocal"/>




</RelativeLayout>