<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/color_gray">
    <RelativeLayout
        android:id="@+id/piece_wash_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/color_white">
        <Button
            android:id="@+id/piece_wash_back"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/basket_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/piece_wash"
            android:textSize="22sp" />
    </RelativeLayout>
    <TextView
        android:id="@+id/piece_wash_line"
        android:layout_below="@+id/piece_wash_title"
        android:layout_width="match_parent"
        android:layout_height="2dp" />
    <LinearLayout
        android:id="@+id/piece_wash_btngroup"
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_below="@+id/piece_wash_line">
        <Button
            android:id="@+id/btn_sprint"
            android:text="@string/spring_clothes"
            style="@style/piece_wash_btn_style"
            android:background="@drawable/wash_btn_press"
            android:textColor="@color/color_blue"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray"/>
        <Button
            android:id="@+id/btn_summer"
            style="@style/piece_wash_btn_style"
            android:background="@drawable/wash_btn_normal"
            android:text="@string/summer_clothes"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray"/>
        <Button
            android:id="@+id/btn_autumn"
            style="@style/piece_wash_btn_style"
            android:background="@drawable/wash_btn_normal"
            android:text="@string/winter_clothes"
            />
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray"/>
        <Button
            android:id="@+id/btn_winter"
            style="@style/piece_wash_btn_style"
            android:background="@drawable/wash_btn_normal"
            android:text="@string/jacky"
            />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/piece_wash_btngroup"
        android:id="@+id/piece_wash_viewpager">
    </android.support.v4.view.ViewPager>


</RelativeLayout>