<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/basket_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/frag_basket_item_clothseimg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/clothes_background"
        android:src="@drawable/basket_list_item_img01" />

    <TextView
        android:id="@+id/frag_basket_item_clothsename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/frag_basket_item_clothseimg"
        android:layout_toRightOf="@id/frag_basket_item_clothseimg"
        android:text="@string/blouse"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag_basket_item_cut"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/basket_list_item_img06" />

        <TextView
            android:id="@+id/frag_basket_item_count"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@drawable/basket_list_item_img07"
            android:gravity="center"
            android:text="@string/num_2"
            android:textColor="#ff4d0f"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/frag_basket_item_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/basket_list_item_img08" />

        <ImageView
            android:id="@+id/frag_basket_item_xxx"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/basket_list_item_img04" />

        <TextView

            android:id="@+id/frag_basket_item_price"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:text="@string/num_8"
            android:textColor="#ff4d0f"
            android:textSize="24sp" />

    </LinearLayout>


    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/frag_basket_item_clothseimg"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/basket_list_item_img09" />


</RelativeLayout>