<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >
    <FrameLayout
        android:id="@+id/layout_frame_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/frame_btn_view">

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewpager_main"
            android:layout_gravity="center" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/frame_btn_view"
        android:background="@color/color_gray"/>
    <LinearLayout
        android:id="@+id/frame_btn_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/color_white"
        android:gravity="center"
        >

        <LinearLayout
            android:id="@+id/mybutton_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:paddingTop="5dp">
            <ImageView
                android:id="@+id/mybutton_home_img"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:src="@drawable/main_home_click"/>
            <TextView
                android:id="@+id/mybutton_home_txt"
                android:paddingTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_home_str"
                android:textSize="15sp"
                android:textColor="@color/color_blue"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mybutton_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:paddingTop="5dp">
            <ImageView
                android:id="@+id/mybutton_basket_img"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:src="@drawable/main_basket_normal"/>
            <TextView
                android:id="@+id/mybutton_basket_txt"
                android:paddingTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_basket_str"
                android:textSize="15sp"
                android:textColor="@color/btn_textcolor"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mybutton_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:paddingTop="5dp">
            <ImageView
                android:id="@+id/mybutton_my_img"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:src="@drawable/main_my_selector"/>
            <TextView
                android:id="@+id/mybutton_my_txt"
                android:paddingTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_my_str"
                android:textSize="15sp"
                android:textColor="@color/btn_textcolor"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mybutton_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:paddingTop="5dp">
            <ImageView
                android:id="@+id/mybutton_more_img"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:src="@drawable/main_more_selector"/>
            <TextView
                android:id="@+id/mybutton_more_txt"
                android:paddingTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_more_str"
                android:textSize="15sp"
                android:textColor="@color/btn_textcolor"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>