<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue">
    <LinearLayout
        android:id="@+id/my_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/frag_my_img01"/>
            <TextView
                android:id="@+id/frag_my_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="李小姐"
                android:textColor="@color/color_white"
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/frag_my_img02"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/frag_my_phone"
                android:text="@string/num_phone"
                android:textColor="@color/color_white"
                android:textSize="20sp"
                />
        </LinearLayout>
        <View
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:background="@color/color_white"
            android:layout_marginTop="20dp"
            />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center"

                >
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/referral_code01"
                    android:textSize="18sp"
                    android:textColor="@color/color_white"/>
                <TextView
                    android:id="@+id/frag_my_code"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:text="@string/referral_code"
                    android:textSize="18sp"
                    android:textColor="@color/color_white"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/color_white"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="剩"
                    android:textColor="@color/color_white"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textColor="@color/color_white"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="张洗衣券"
                    android:textColor="@color/color_white"
                    android:textSize="18sp"/>

            </LinearLayout>

    </LinearLayout>


    <GridView
        android:layout_below="@id/my_linear"
        android:id="@+id/frag_my_grid"
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="3"
        android:gravity="center"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:layout_marginBottom="2dp"

        >
    </GridView>


</RelativeLayout>
